@@ -4,6 +4,7 @@ Revision history for Dist-Build
           - Adapt to load_extension
           - Normalize sharedir paths in create_pattern
           - Add is_os and is_os_type delegates
+          - Rename distribution_version delegate to version
 
 0.018     2025-03-17 11:58:21+01:00 Europe/Brussels
           - Add auto_xs to Dist::Build::XS
